--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@types/jwt-decode": "^2.2.1",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.2",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "^10.1.3",
     "@types/jasmine": "~3.5.0",
